[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/RoleSelect/role_select.gd" type="Script" id=1]

[node name="RoleSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonCaptain" type="Button" parent="."]
margin_left = 80.0
margin_top = 256.0
margin_right = 272.0
margin_bottom = 320.0
text = "Captain"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFirstMate" type="Button" parent="."]
margin_left = 304.0
margin_top = 256.0
margin_right = 496.0
margin_bottom = 320.0
text = "First Mate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEngineer" type="Button" parent="."]
margin_left = 528.0
margin_top = 256.0
margin_right = 720.0
margin_bottom = 320.0
text = "Engineer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRadio" type="Button" parent="."]
margin_left = 752.0
margin_top = 256.0
margin_right = 944.0
margin_bottom = 320.0
text = "Radio Operator"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonCaptain" to="." method="_on_ButtonCaptain_pressed"]
[connection signal="pressed" from="ButtonFirstMate" to="." method="_on_ButtonFirstMate_pressed"]
[connection signal="pressed" from="ButtonEngineer" to="." method="_on_ButtonEngineer_pressed"]
[connection signal="pressed" from="ButtonRadio" to="." method="_on_ButtonRadio_pressed"]
